update controllers
