# controllers/auth/updateUserInformation.js
@@ -1,30 +1,27 @@
 const User = require("../../models/user");
 const { uploadFile } = require("../../middleware");
 
-
 const updateUserInformation = async (req, res, next) => {
-  console.log(req.file.path);
+  const { _id, name: oldName, avatarURL } = req.user;
   const { name } = req.body;
-  const { _id } = req.user;
-  if (!name) {
-    return res.status(400).json({ message: "Name field cannot be empty." });
-  }
-
+console.log(req.user);
   if (req.file) {
     if (req.file.size > 3 * 1024 * 1024) {
       return res.status(400).json({ message: "File size exceeds the limit." });
     }
-    const { filename } = req.file;
-    const result = await uploadFile(req.file.fieldname, filename);
+    const { filename, fieldname } = req.file;
+
+    const result = await uploadFile(fieldname, filename);
 
     const updates = {
-      name,
+    name:  name || oldName,
       avatarURL: result.secure_url,
     };
 
     await User.findByIdAndUpdate(_id, { $set: updates });
 
     return res.status(201).json({
+    massage: "Your data has been updated successfully",
       name: updates.name,
       avatarURL: updates.avatarURL,
     });
@@ -32,7 +29,11 @@ const updateUserInformation = async (req, res, next) => {
 
   await User.findByIdAndUpdate(_id, { name });
 
-  res.status(201).json({ name });
+  res.status(201).json({ 
+    massage: "Your data has been updated successfully",
+    name,
+    avatarURL   
+  });
 };
 
 module.exports = { updateUserInformation };
